# workflows-engine

./: README.rst  cli  pyproject.toml  test.sh  tox.ini  workflows
.github/workflows/: ci.yml  lint.yml  release.yml
computations/: __init__.py  __main__.py  computations.py  engine.py  errors.py  jobs.py  protocols.py  state.py  storage.py
computations/cli/: application.py  state.py
tests/: test_job.py  test_state.py  test_storage.py  test_works.py
tools/: devtools.py  requirements.dev.txt  venv
workflows_engine/: __init__.py  __main__.py  computations.py  errors.py  futures.py  instructions.py  protocols.py  workflows.py
workflows_engine/cli/: cli.py  state.py
