[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "computations"
dynamic = ["version"]
description = "An experimental API for a computations"
readme = "README.rst"
license = { text = "MIT" }
requires-python = ">= 3.10"
authors = [
    { name = "Stephen Moore", email = "stephen@delfick.com" },
]
dependencies = [
]

[project.optional-dependencies]
tests = [
    "pytest==7.3.0",
]

[project.urls]
Homepage = "https://github.com/delfick/computations"

[tool.hatch.version]
path = "computations/version.py"

[tool.hatch.build.targets.sdist]
include = [
    "/computations",
]

[tool.ruff]
target-version = "py311"
line-length = 99
select = [
    "B008",  # mutable objects as function argument defaults
    "B015",  # flake8-bugbear (useless-comparison)
    "I",  # isort
    "T20",  # flake8-print
    "UP",  # pyupgrade
    "RUF",
    "F",
]
extend-exclude = [
    ".DS_Store",
    ".pytest_cache",
    "tools/.python",
    "tools/deps",
    "__pycache__",
]

[tool.ruff.per-file-ignores]
"tools/devtools.py" = [
    "T201",  # flake8-print
]

[tool.mypy]
strict = true
exclude = [
    ".DS_Store",
    ".pytest_cache",
    "tools/.python",
    "tools/deps",
    "__pycache__",
]
