[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "workflows-engine"
dynamic = ["version"]
description = "An experimental API for a workflows engine"
readme = "README.rst"
license = { text = "MIT" }
requires-python = ">= 3.10"
authors = [
    { name = "Stephen Moore", email = "stephen@delfick.com" },
]
dependencies = [
    "attrs>=23.0.0"
]

[project.optional-dependencies]
tests = [
    "noseOfYeti[black]==2.4.1",
    "pytest==7.3.0",
]
ui = [
    "typer[all]>=0.9.0",
    "prompt-toolkit>=3.0.0",
]
pinned = [
    "attrs==23.1.0",
]
ui-pinned = [
    "typer[all]==0.9.0",
    "prompt-toolkit==3.0.39"
]

[project.urls]
Homepage = "https://github.com/delfick/workflows-engine"

[tool.hatch.version]
path = "workflows_engine/version.py"

[tool.hatch.build.targets.sdist]
include = [
    "/workflows_engine",
]

[tool.black]
line-length = 100
include = '\.py$'
exclude = '''
/(
     \.git
   | \.tox
   | dist
   | tools/\.python
)/
'''

[tool.isort]
profile = "black"
skip_glob = [
   ".git/*",
   ".tox/*",
   "dist/*",
   "tools/.*",
]

[tool.mypy]
plugins = 'noseOfYeti.plugins.mypy'
ignore_missing_imports = true
show_column_numbers = true
allow_redefinition = true
